<resources>
    <string name="app_name">Lottery</string>
    <string name="navigation_chongqing_cai">重庆彩</string>
    <string name="navigation_recharge">充值</string>
    <string name="navigation_withdraw">提现</string>
    <string name="navigation_promotions">优惠活动</string>
    <string name="navigation_user_center">用户中心</string>
    <string name="navigation_help_center">帮助中心</string>

    <string name="home_trial_play">试玩</string>
    <string name="home_register">注册</string>
    <string name="home_login">登录</string>
    <string name="home_chongqing_cai">重庆时时彩</string>
    <string name="home_ahks">安徽快三</string>
    <string name="home_bjsc">PK10\n北京赛车</string>
    <string name="home_11x5">广东11选5</string>
    <string name="home_pl3">PL3</string>
    <string name="home_more">更多</string>

    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_confirm_password">再次输入密码</string>
    <string name="login_verification_code">验证码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_user_registration">新用户注册</string>
    <string name="login_user_login">已有账号，立即登录</string>
    <string name="login_version">M5彩票娱乐线上系统2.0 版权所有</string>
    <string name="login_friendly_reminder">友情提示：理性购彩，热心公益，未满18周岁禁止购彩及兑奖</string>

    <string name="betting_how_to_play">玩\n法</string>
    <string name="betting_cutoff">截止</string>
    <string name="betting_empty">清空</string>
    <string name="betting_multiple">倍</string>
    <string name="betting">投注</string>
    <string name="betting_missed">遗漏</string>
    <string name="betting_cold">冷热</string>

    <string name="msg_request_error">请求出错啦!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
