<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/home_logo"/>

        <EditText
            android:id="@+id/editAccount"
            android:theme="@style/MyEditText"
            style="@style/login_edit"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/login_account"/>

        <EditText
            android:id="@+id/editPassword"
            android:theme="@style/MyEditText"
            style="@style/login_edit"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:hint="@string/login_password"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editVerificationCode"
                android:theme="@style/MyEditText"
                style="@style/login_edit"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="number"
                android:hint="@string/login_verification_code"/>

            <ImageView
                android:id="@+id/imgVerificationCode"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <com.baixun.lottery.widget.SuperTextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/BasicTextSize"
            android:text="@string/home_login"
            app:solid="@color/red"/>

        <TextView
            android:id="@+id/btnTrialPlay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/BasicTextSize"
            android:text="@string/home_trial_play"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/SmallerTextSize"
                android:text="@string/login_forget_password"/>

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/SmallerTextSize"
                android:text="@string/login_user_registration"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/login_text"
        android:textSize="@dimen/LesserTextSize"
        android:text="@string/login_friendly_reminder"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/login_text"
        android:textSize="@dimen/LesserTextSize"
        android:text="@string/login_version"/>

</RelativeLayout>